# chitin

./: .gitignore  README.md  pyproject.toml  pytest.ini
.chitin/: README.md  config.yaml.example  tools.yaml.example
chitin_agent/: __init__.py  config.py  context.py  engine.py  executor.py  main.py  persistence.py  session.py
chitin_agent/api/: __init__.py  auth.py  models.py  routes.py  server.py  store.py
chitin_agent/enterprise/: __init__.py  audit.py  policy_refresh.py  policy_server.py
chitin_agent/escalation/: __init__.py  auto_deny.py  handler.py  terminal.py
chitin_agent/llm/: __init__.py  adapter.py  anthropic.py  errors.py  ollama.py  types.py
chitin_agent/mcp/: __init__.py  client.py  transport.py
chitin_agent/policy/: __init__.py  classifier.py  loader.py
examples/: basic_config.json  basic_config.yaml  enterprise_config.yaml  example_policy.yaml  ollama_config.json  ollama_config.yaml  tools.yaml
tests/: __init__.py  conftest.py  mock_chitin.py  mock_policy_server.py  test_api.py  test_config.py  test_context.py  test_enterprise.py  test_escalation.py  test_executor.py  test_mcp_client.py  test_persistence.py
